Fix layout bugs
This adjusts classes and css styles, sometimes importing
a parent template into the extension to do so. It applies
the following fixes

- Align labels to the left column and form fields to the
right and fix overflows
- Adjust widths of elements where needed
- Adjust margins, padding and overflows to ensure js elements
sit correctly in relation to form
- Apply gradients to buttons
- Reinstate border between footer and body of page

--- a/ckanext/datagovuk/public/datagovuk.css
+++ b/ckanext/datagovuk/public/datagovuk.css
@@ -59,14 +59,6 @@ a.btn .icon-briefcase {
   background-position: 36px 17px;
 }
 
-.form-horizontal .control-label {
-  width: 140px;
-}
-
-.form-horizontal .controls {
-  margin-left: 145px;
-}
-
 .controls #field-schema-vocabulary,
 .controls #field-codelist {
   width: 100%;
@@ -114,4 +106,92 @@ p.home-footer-text {
   .toolbar .breadcrumb a {
     color: #505050;
   }
+}
+
+.form-control {
+  margin-bottom: 14px;
+}
+
+.control-label {
+  text-align: right;
+  padding-right: 0;
+  padding-top: 4px;
+}
+
+.control-full input[type=radio]{
+  width: auto;
+}
+
+.harvest-types label.radio {
+  margin-bottom: 0;
+}
+
+.harvest-types label.radio input{
+  top: -1px;
+}
+
+.editor-info-block {
+  margin-top: -14px;
+  margin-bottom: 14px;
+}
+
+.float-container,
+.form-group {
+  overflow: auto;
+}
+
+.form-group {
+  margin-bottom: 14px;
+}
+
+.form-control {
+  height: 32px;
+}
+
+.select2-container.form-control {
+  padding: 0;
+  border: 0;
+}
+
+.select2-drop {
+  margin-top: -7px;
+}
+
+.select2-drop.select2-drop-above {
+  margin-top: -3px;
+}
+
+.form-actions {
+  padding-top: 14px;
+  border-top: 1px solid #707070;
+}
+
+.btn-danger {
+  background-image: linear-gradient(to bottom,#ee5f5b,#bd362f);
+}
+
+.btn-primary {
+  background-image: linear-gradient(to bottom,#30778d,#085871);
+}
+
+.js .image-upload .btn-remove-url {
+  margin-right: 15px;
+}
+
+.error .input-group-addon {
+  float: left;
+  display: block;
+  width: auto;
+}
+
+.error-block {
+  margin-top: -2px;
+}
+
+.error .form-control {
+  margin-bottom: -4px;
+}
+
+.u-overflow-hidden {
+  overflow: hidden;
 }
